added support for headless running